--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/css/style.css' />
-  </head>
+<%- include('partials/head', {title: title}) %>
   <body>
     <figure>
       <img src="/img/logo-DH.png" alt="Logo Digital House">
