--- a/src/views/recommendedMovies.ejs
+++ b/src/views/recommendedMovies.ejs
@@ -1,11 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Películas ordenadas por rating</title>
-    <link rel='stylesheet' href='/css/style.css' />
-</head>
+<%- include('partials/head', {title: 'Películas ordenadas por rating'}) %>
 <body>
     <figure>
         <img src="/img/logo-DH.png" alt="Logo Digital House">
@@ -14,11 +9,10 @@
     <ul>
         <% for( let i = 0; i < movies.length; i++ ) { %>
         <li>
-            <a href="/movies/detail/<%=movies[i].id%>"><%= movies[i].title %> </a> <br>
-            <%= 'RATING: ' + movies[i].rating %> 
+            <a href="/movies/detail/<%=movies[i].id%>"><%= movies[i].title %></a> <br>
+            <%= 'RATING: ' + movies[i].rating %>
         </li>
         <% } %>
-        
     </ul>
 </body>
 </html>
