parcializar header y buscador

--- a/src/views/actorsList.ejs
+++ b/src/views/actorsList.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
     <%- include('partials/head', {title: 'Listado de Actores'}) %>
     <body>
+        <%- include('partials/header') %>
         <figure>
             <img src="/img/logo-DH.png" alt="Logo Digital House">
           </figure>
