--- a/src/views/actorsDetail.ejs
+++ b/src/views/actorsDetail.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
     <%- include('partials/head', {title: `${actor.first_name} ${actor.last_name}`}) %>
     <body>
+        <%- include('partials/header') %>
         <figure>
             <img src="/img/logo-DH.png" alt="Logo Digital House">
         </figure>    
