--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -2,6 +2,7 @@
 <html>
 <%- include('partials/head', {title: title}) %>
   <body>
+    <%- include('partials/header') %>
     <figure>
       <img src="/img/logo-DH.png" alt="Logo Digital House">
     </figure>
