--- a/src/views/moviesDetail.ejs
+++ b/src/views/moviesDetail.ejs
@@ -2,9 +2,11 @@
 <html lang="en">
 <%- include('partials/head', {title: movie.title}) %>
 <body>
+    <%- include('partials/header') %>
     <figure>
         <img src="/img/logo-DH.png" alt="Logo Digital House">
     </figure>
+    <%- include('partials/search') %>
     <h1><%= movie.title %></h1>    
     <br>
     <p>RATING: <%= movie.rating %></p>
