--- a/src/views/moviesEdit.ejs
+++ b/src/views/moviesEdit.ejs
@@ -2,6 +2,7 @@
 <html lang="es">
 <%- include('partials/head', {title: 'Editar Película'}) %>
 <body>
+    <%- include('partials/header') %>
     <figure>
         <img src="/img/logo-DH.png" alt="Logo Digital House">
       </figure>
