--- a/src/views/recommendedMovies.ejs
+++ b/src/views/recommendedMovies.ejs
@@ -2,9 +2,11 @@
 <html lang="en">
 <%- include('partials/head', {title: 'Películas ordenadas por rating'}) %>
 <body>
+    <%- include('partials/header') %>
     <figure>
         <img src="/img/logo-DH.png" alt="Logo Digital House">
     </figure>
+    <%- include('partials/search') %>
     <h1>PELÍCULAS ORDENADAS POR POSICIÓN</h1>
     <ul>
         <% for( let i = 0; i < movies.length; i++ ) { %>
