modelos y header completos

--- a/public/css/header.css
+++ b/public/css/header.css
@@ -1,33 +1,61 @@
-header{}
-header .titulo{}
-header .titulo .link-home{}
-header .burger-menu{}
-header .burger-menu .check{}
-header .burger-menu .burger{}
-header .burger-menu ul{}
-header .burger-menu ul li{}
-header .burger-menu ul li .link-menu{}
-
-@media (min-width: 426px) {
-    header{}
-    header .titulo{}
-    header .titulo .link-home{}
-    header .burger-menu{}
-    header .burger-menu .check{}
-    header .burger-menu .burger{}
-    header .burger-menu ul{}
-    header .burger-menu ul li{}
-    header .burger-menu ul li .link-menu{}    
+header{
+    background-color: #000000;
+    padding: 20px;
+    display: flex;
+    justify-content: space-between;
+}
+header .box-titulo .link-home{
+    text-decoration: none;
+    color: #fff;
+    font-size: 18px;
+}
+header .burger-menu{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+header .burger-menu .check{
+    display: none;
+}
+header .burger-menu .check:checked ~ ul{
+    display: inline;
+}
+header .burger-menu .burger{
+    background-color: #d41111;
+    border-radius: 8px;
+    font-size: 20px;
+    padding: 7px;
+    margin: 2px;
+    color: #fff;
+    align-self: flex-end;
+}
+header .burger-menu ul{
+    display: none;
+}
+header .burger-menu ul li{
+    list-style: none;
+    margin: 10px auto;
+}
+header .burger-menu ul li .link-menu{
+    text-decoration: none;
+    color: #fff;
 }
 
 @media (min-width: 769px) {
-    header{}
-    header .titulo{}
-    header .titulo .link-home{}
-    header .burger-menu{}
-    header .burger-menu .check{}
-    header .burger-menu .burger{}
-    header .burger-menu ul{}
-    header .burger-menu ul li{}
-    header .burger-menu ul li .link-menu{}    
+    header{
+        flex-direction: column;
+    }
+    header .burger-menu{
+        justify-content: flex-start;
+    }
+    header .burger-menu .burger{
+        display: none;
+    }
+    header .burger-menu ul{
+        display: inline-flex;
+        flex-wrap: wrap;
+    }
+    header .burger-menu ul li:first-child{
+        margin-left: 0;
+    }
 }
