--- a/src/views/moviesDetail.ejs
+++ b/src/views/moviesDetail.ejs
@@ -3,21 +3,24 @@
 <%- include('partials/head', {title: movie.title}) %>
 <body>
     <%- include('partials/header') %>
-    <figure>
-        <img src="/img/logo-DH.png" alt="Logo Digital House">
-    </figure>
-    <%- include('partials/search') %>
-    <h1><%= movie.title %></h1>    
-    <br>
-    <p>RATING: <%= movie.rating %></p>
-    <p>AWARDS: <%= movie.awards %></p>
-    <p>LENGTH: <%= movie.length + ' min'%></p>
-    <p>RELEASE DATE: <%= movie.release_date %></p>
-    <a href="/movies/edit/<%= movie.id %>">
-        <button class="botonAgregar" type="button">Editar Película</button>
-    </a>
-    <a href="/movies/delete/<%= movie.id %>">
-        <button class="botonAgregar" type="button">Borrar Película</button>
-    </a>
+    <main>
+        <figure>
+            <img src="/img/logo-DH.png" alt="Logo Digital House">
+        </figure>
+        <%- include('partials/search') %>
+        <h1><%= movie.title %></h1>    
+        <br>
+        <p>RATING: <%= movie.rating %></p>
+        <p>AWARDS: <%= movie.awards %></p>
+        <p>LENGTH: <%= movie.length + ' min'%></p>
+        <p>RELEASE DATE: <%= movie.release_date %></p>
+        <a class="link-button" href="/movies/edit/<%= movie.id %>">
+            <button class="botonAgregar" type="button">Editar Película</button>
+        </a>
+        <a class="link-button" href="/movies/delete/<%= movie.id %>">
+            <button class="botonAgregar" type="button">Borrar Película</button>
+        </a>
+    </main>
+    <%- include('partials/scripts') %>
 </body>
 </html>
