--- a/src/views/newestMovies.ejs
+++ b/src/views/newestMovies.ejs
@@ -3,18 +3,21 @@
 <%- include('partials/head', {title: 'Películas ordenadas por fecha'}) %>
 <body>
     <%- include('partials/header') %>
-    <figure>
-        <img src="/img/logo-DH.png" alt="Logo Digital House">
-    </figure>
-    <%- include('partials/search') %>
-    <h1>PELÍCULAS ORDENADAS POR FECHA</h1>
-    <ul>
-        <% for( let i = 0; i < movies.length; i++ ) { %>
-        <li>
-            <a href="/movies/detail/<%=movies[i].id%>"><%= movies[i].title %></a> <br>
-            <%= 'RELEASE DATE: ' + movies[i].release_date %>
-        </li>
-        <% } %>
-    </ul>
+    <main>
+        <figure>
+            <img src="/img/logo-DH.png" alt="Logo Digital House">
+        </figure>
+        <%- include('partials/search') %>
+        <h1>PELÍCULAS ORDENADAS POR FECHA</h1>
+        <ul>
+            <% for( let i = 0; i < movies.length; i++ ) { %>
+            <li>
+                <a href="/movies/detail/<%=movies[i].id%>"><%= movies[i].title %></a> <br>
+                <%= 'RELEASE DATE: ' + movies[i].release_date %>
+            </li>
+            <% } %>
+        </ul>
+    </main>
+    <%- include('partials/scripts') %>
 </body>
 </html>
