--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,5 +1,5 @@
 <header>
-    <div class="titulo">
+    <div class="box-titulo">
       <a class="link-home" href="/">Quiero La Película</a>
     </div>
     <nav class="burger-menu">
