--- a/src/views/partials/search.ejs
+++ b/src/views/partials/search.ejs
@@ -1,6 +1,6 @@
 <div class="buscador">
-    <form action="/movies/search">
-        <input type="search" name="keywords" placeholder="Busca tu película aquí...">
+    <form id="form-search" action="/movies/search">
+        <input id="search" type="search" name="keywords" placeholder="Busca tu película aquí...">
         <button type="submit"><i class="fas fa-search"></i></button>
     </form>
 </div>
