--- a/src/views/actorsDetail.ejs
+++ b/src/views/actorsDetail.ejs
@@ -3,14 +3,16 @@
     <%- include('partials/head', {title: `${actor.first_name} ${actor.last_name}`}) %>
     <body>
         <%- include('partials/header') %>
-        <figure>
-            <img src="/img/logo-DH.png" alt="Logo Digital House">
-        </figure>    
-        <h1><%= `${actor.first_name} ${actor.last_name}` %></h1>
-        <br>
-        <p>NAME: <%= actor.first_name %></p>
-        <p>LAST NAME: <%= actor.last_name %></p>
-        <p>RANKING: <%= actor.ranking %></p>
-        <p>FAVORITE MOVIE: <%= actor.favorite_movie_id %></p>
+        <main>
+            <figure>
+                <img src="/img/logo-DH.png" alt="Logo Digital House">
+            </figure>    
+            <h1><%= `${actor.first_name} ${actor.last_name}` %></h1>
+            <br>
+            <p>NAME: <%= actor.first_name %></p>
+            <p>LAST NAME: <%= actor.last_name %></p>
+            <p>RANKING: <%= actor.ranking %></p>
+            <p>FAVORITE MOVIE: <%= actor.favorite_movie_id %></p>
+        </main>
     </body>
 </html>
