--- a/src/views/actorsList.ejs
+++ b/src/views/actorsList.ejs
@@ -3,16 +3,18 @@
     <%- include('partials/head', {title: 'Listado de Actores'}) %>
     <body>
         <%- include('partials/header') %>
-        <figure>
-            <img src="/img/logo-DH.png" alt="Logo Digital House">
-          </figure>
-        <h1>LISTADO DE ACTORES</h1>
-        <ul>
-            <% for( let i = 0; i < actors.length; i++ ) { %>
-            <li>
-                <a href="/actors/detail/<%= actors[i].id %>"><%= `${actors[i].first_name} ${actors[i].last_name}` %></a>
-            </li>
-            <% } %>
-        </ul>
+        <main>
+            <figure>
+                <img src="/img/logo-DH.png" alt="Logo Digital House">
+              </figure>
+            <h1>LISTADO DE ACTORES</h1>
+            <ul>
+                <% for( let i = 0; i < actors.length; i++ ) { %>
+                <li>
+                    <a href="/actors/detail/<%= actors[i].id %>"><%= `${actors[i].first_name} ${actors[i].last_name}` %></a>
+                </li>
+                <% } %>
+            </ul>
+        </main>
     </body>
 </html>
