--- a/src/views/genresDetail.ejs
+++ b/src/views/genresDetail.ejs
@@ -3,12 +3,14 @@
 <%- include('partials/head', {title: genre.name}) %>
 <body>
     <%- include('partials/header') %>
-    <figure>
-        <img src="/img/logo-DH.png" alt="Logo Digital House">
-    </figure>    
-    <h1><%= genre.name %></h1>
-    <br>
-    <p>NAME: <%= genre.name %></p>
-    <p>RANKING: <%= genre.ranking %></p>
+    <main>
+        <figure>
+            <img src="/img/logo-DH.png" alt="Logo Digital House">
+        </figure>    
+        <h1><%= genre.name %></h1>
+        <br>
+        <p>NAME: <%= genre.name %></p>
+        <p>RANKING: <%= genre.ranking %></p>
+    </main>
 </body>
 </html>
