--- a/src/views/genresList.ejs
+++ b/src/views/genresList.ejs
@@ -3,17 +3,19 @@
 <%- include('partials/head', {title: 'Listado de Generos'}) %>
 <body>
     <%- include('partials/header') %>
-    <figure>
-        <img src="/img/logo-DH.png" alt="Logo Digital House">
-      </figure>
-    <h1>LISTADO DE GENEROS</h1>
-    <ul>
-        <% for( let i = 0; i < genres.length; i++ ) { %>
-        <li>
-            <a href="/genres/detail/<%= genres[i].id %>"><%= genres[i].name %></a>
-        </li>
-        <% } %>
-    </ul>
+    <main>
+        <figure>
+            <img src="/img/logo-DH.png" alt="Logo Digital House">
+          </figure>
+        <h1>LISTADO DE GENEROS</h1>
+        <ul>
+            <% for( let i = 0; i < genres.length; i++ ) { %>
+            <li>
+                <a href="/genres/detail/<%= genres[i].id %>"><%= genres[i].name %></a>
+            </li>
+            <% } %>
+        </ul>
+    </main>
 </body>
 
 </html>
