--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -3,10 +3,12 @@
 <%- include('partials/head', {title: title}) %>
   <body>
     <%- include('partials/header') %>
-    <figure>
-      <img src="/img/logo-DH.png" alt="Logo Digital House">
-    </figure>
-    <h1><%= title %></h1>
-    <p>Bienvenidos a <%= title %></p>
+    <main>
+      <figure>
+        <img src="/img/logo-DH.png" alt="Logo Digital House">
+      </figure>
+      <h1><%= title %></h1>
+      <p>Bienvenidos a <%= title %></p>
+    </main>
   </body>
 </html>
