--- a/src/views/moviesDelete.ejs
+++ b/src/views/moviesDelete.ejs
@@ -3,19 +3,21 @@
 <%- include('partials/head', {title: 'Borrado de la Película'}) %>
 <body>
     <%- include('partials/header') %>
-    <figure>
-        <img src="/img/logo-DH.png" alt="Logo Digital House">
-      </figure>
-    <h1>Estas seguro de querer borrar esta película: <%= Movie.title %>???</h1>
-    <p>
-        <form action="/movies/destroy/<%= Movie.id %>?_method=DELETE" method="POST">
-            <br>
-            <p> <button class="botonBorrar" type="submit">Borrar la Película</button>
-            
-            <a  class="botonVolver" href="/movies">Listado de Películas</a></p>
-
-        </form>
-    </p>
+    <main>
+        <figure>
+            <img src="/img/logo-DH.png" alt="Logo Digital House">
+          </figure>
+        <h1>Estas seguro de querer borrar esta película: <%= Movie.title %>???</h1>
+        <p>
+            <form action="/movies/destroy/<%= Movie.id %>?_method=DELETE" method="POST">
+                <br>
+                <p> <button class="botonBorrar" type="submit">Borrar la Película</button>
+                
+                <a  class="botonVolver" href="/movies">Listado de Películas</a></p>
+        
+            </form>
+        </p>
+    </main>
     
 </body>
 
