--- a/src/views/moviesList.ejs
+++ b/src/views/moviesList.ejs
@@ -3,18 +3,21 @@
 <%- include('partials/head', {title: 'Listado de Películas'}) %>
 <body>
     <%- include('partials/header') %>
-    <figure>
-        <img src="/img/logo-DH.png" alt="Logo Digital House">
-    </figure>
-    <%- include('partials/search') %>
-    <h1>LISTADO DE PELÍCULAS</h1>
-    <ul>
-        <% for( let i = 0; i < movies.length; i++ ) { %>
-        <li>
-            <a href="/movies/detail/<%= movies[i].id %>"><%= movies[i].title %></a>
-        </li>
-        <% } %>
-    </ul>
+    <main>
+        <figure>
+            <img src="/img/logo-DH.png" alt="Logo Digital House">
+        </figure>
+        <%- include('partials/search') %>
+        <h1>LISTADO DE PELÍCULAS</h1>
+        <ul>
+            <% for( let i = 0; i < movies.length; i++ ) { %>
+            <li>
+                <a href="/movies/detail/<%= movies[i].id %>"><%= movies[i].title %></a>
+            </li>
+            <% } %>
+        </ul>
+    </main>
+    <%- include('partials/scripts') %>
 </body>
 
 </html>
