--- a/src/views/moviesResult.ejs
+++ b/src/views/moviesResult.ejs
@@ -3,21 +3,24 @@
     <%- include('partials/head') %>
     <body>
         <%- include('partials/header') %>
-        <figure>
-            <img src="/img/logo-DH.png" alt="Logo Digital House">
-        </figure>
-        <%- include('partials/search') %>
-        <h1><%= title %>: <%= busqueda %></h1>
-        <ul>
-            <% if (movies.length > 0) { %>
-                <% for( let i = 0; i < movies.length; i++ ) { %>
-                    <li>
-                        <a href="/movies/detail/<%= movies[i].id %>"><%= movies[i].title %></a>
-                    </li>
+        <main>
+            <figure>
+                <img src="/img/logo-DH.png" alt="Logo Digital House">
+            </figure>
+            <%- include('partials/search') %>
+            <h1><%= title %>: <%= busqueda %></h1>
+            <ul>
+                <% if (movies.length > 0) { %>
+                    <% for( let i = 0; i < movies.length; i++ ) { %>
+                        <li>
+                            <a href="/movies/detail/<%= movies[i].id %>"><%= movies[i].title %></a>
+                        </li>
+                    <% } %>
+                <% } else { %>
+                 <p>No hay resultados para tu búsqueda</p>
                 <% } %>
-            <% } else { %>
-             <p>No hay resultados para tu búsqueda</p>
-            <% } %>
-        </ul>
+            </ul>
+        </main>
+        <%- include('partials/scripts') %>
     </body>
 </html>
